[package]
name = "cerberus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.57"
env_logger = "0.9.0"
lazy_static = "1.4"
log = "0.4.17"
reqwest = "0.11.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = { version = "4.2", default-features = false }
tokio = { version = "1.20", features = ["full"] }
tokio-util = "0.7.3"
warp = "0.3.2"
